--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -8,9 +8,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  publish:
+  publish-amd64:
     if: github.repository == 'sgl-project/sglang'
-    runs-on: ubuntu-latest
     environment: 'prod'
     strategy:
       matrix:
@@ -21,6 +20,7 @@ jobs:
             build_type: 'blackwell'
           - cuda_version: '12.8.1'
             build_type: 'all'
+    runs-on: ubuntu-latest
     steps:
       - name: Delete huge unnecessary tools folder
         run: rm -rf /opt/hostedtoolcache
@@ -39,13 +39,16 @@ jobs:
           large-packages: true
           swap-storage: false
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and Push
+      - name: Build and Push AMD64
         run: |
           version=$(cat python/sglang/version.py | cut -d'"' -f2)
 
@@ -79,10 +82,41 @@ jobs:
             exit 1
           fi
 
-          docker buildx build --output type=image,compression=zstd . -f docker/Dockerfile --build-arg CUDA_VERSION=${{ matrix.cuda_version }} --build-arg BUILD_TYPE=${{ matrix.build_type }} -t lmsysorg/sglang:${tag}${tag_suffix} --no-cache
-          docker push lmsysorg/sglang:${tag}${tag_suffix}
-
           if [ "${{ matrix.cuda_version }}" = "12.6.1" ]; then
-            docker tag lmsysorg/sglang:${tag}${tag_suffix} lmsysorg/sglang:latest${tag_suffix}
-            docker push lmsysorg/sglang:latest${tag_suffix}
+            docker buildx build --platform linux/amd64 --push -f docker/Dockerfile --build-arg CUDA_VERSION=${{ matrix.cuda_version }} --build-arg BUILD_TYPE=${{ matrix.build_type }} -t lmsysorg/sglang:${tag}${tag_suffix} -t lmsysorg/sglang:latest --no-cache .
+          else
+            docker buildx build --platform linux/amd64 --push -f docker/Dockerfile --build-arg CUDA_VERSION=${{ matrix.cuda_version }} --build-arg BUILD_TYPE=${{ matrix.build_type }} -t lmsysorg/sglang:${tag}${tag_suffix} --no-cache .
           fi
+
+  publish-arm64:
+    if: github.repository == 'sgl-project/sglang'
+    environment: 'prod'
+    strategy:
+      matrix:
+        cuda_version: ['12.8.1']
+        build_type: ['blackwell']
+    runs-on: ubuntu-22.04-arm
+    steps:
+      - name: Delete huge unnecessary tools folder
+        run: rm -rf /opt/hostedtoolcache
+
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and Push ARM64
+        run: |
+          version=$(cat python/sglang/version.py | cut -d'"' -f2)
+          cuda_tag="cu128"
+          tag=v${version}-${cuda_tag}
+          tag_suffix="-gb200"
+
+          docker buildx build --platform linux/arm64 --push -f docker/Dockerfile --build-arg CUDA_VERSION=${{ matrix.cuda_version }} --build-arg BUILD_TYPE=${{ matrix.build_type }} -t lmsysorg/sglang:${tag}${tag_suffix} --no-cache .
