--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -74,6 +74,7 @@ blackwell = [
     "einops",
     "flashinfer_python==0.2.10",
     "tiktoken",
+    "openai==1.99.1",
 ]
 
 # HIP (Heterogeneous-computing Interface for Portability) for AMD
@@ -97,7 +98,7 @@ srt_cpu = ["sglang[runtime_common]", "einops"]
 # https://vllm-ascend.readthedocs.io/en/latest/installation.html
 srt_npu = ["sglang[runtime_common]"]
 
-openai = ["openai>=1.99.1", "tiktoken"]
+openai = ["openai==1.99.1", "tiktoken"]
 anthropic = ["anthropic>=0.20.0"]
 litellm = ["litellm>=1.0.0"]
 torch_memory_saver = ["torch_memory_saver>=0.0.8"]
