--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -105,6 +105,7 @@ torch_memory_saver = ["torch_memory_saver>=0.0.8"]
 decord = ["decord"]
 test = [
     "accelerate",
+    "expecttest",
     "jsonlines",
     "matplotlib",
     "pandas",
