Change x86 build to run on ubuntu-latest

--- a/.github/workflows/release-docker-dev.yml
+++ b/.github/workflows/release-docker-dev.yml
@@ -45,7 +45,7 @@ jobs:
 
   build-blackwell-x86:
     if: ${{ github.repository == 'sgl-project/sglang' }}
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         variant:
