Add ROCm7.0 support for gfx942

--- a/docker/Dockerfile.rocm
+++ b/docker/Dockerfile.rocm
@@ -4,7 +4,7 @@
 
 # Default base images
 ARG BASE_IMAGE_950="rocm/sgl-dev:rocm7-vllm-20250821"
-ARG BASE_IMAGE_942="rocm/sgl-dev:vllm20250114"
+ARG BASE_IMAGE_942="rocm/sgl-dev:rocm7-vllm-20250821"
 
 # This is necessary for scope purpose
 ARG GPU_ARCH=gfx950
@@ -13,11 +13,11 @@ ARG GPU_ARCH=gfx950
 # Base image 942 and args
 FROM $BASE_IMAGE_942 AS gfx942
 ENV BUILD_VLLM="0"
-ENV BUILD_TRITON="1"
+ENV BUILD_TRITON="0"
 ENV BUILD_LLVM="0"
 ENV BUILD_AITER_ALL="1"
 ENV BUILD_MOONCAKE="1"
-ENV AITER_COMMIT="v0.1.4"
+ENV AITER_COMMIT="85f66157f3d3f085085caa554b398d264c73a733"
 ENV NO_DEPS_FLAG=""
 
 # ===============================
@@ -26,7 +26,7 @@ FROM $BASE_IMAGE_950 AS gfx950
 ENV BUILD_VLLM="0"
 ENV BUILD_TRITON="0"
 ENV BUILD_LLVM="0"
-ENV BUILD_AITER_ALL="0"
+ENV BUILD_AITER_ALL="1"
 ENV BUILD_MOONCAKE="1"
 ENV AITER_COMMIT="85f66157f3d3f085085caa554b398d264c73a733"
 ENV NO_DEPS_FLAG="--no-deps"
