--- a/docker/Dockerfile.rocm
+++ b/docker/Dockerfile.rocm
@@ -17,7 +17,7 @@ ENV BUILD_TRITON="0"
 ENV BUILD_LLVM="0"
 ENV BUILD_AITER_ALL="1"
 ENV BUILD_MOONCAKE="1"
-ENV AITER_COMMIT="85f66157f3d3f085085caa554b398d264c73a733"
+ENV AITER_COMMIT="v0.1.5"
 ENV NO_DEPS_FLAG=""
 
 # ===============================
@@ -28,7 +28,7 @@ ENV BUILD_TRITON="0"
 ENV BUILD_LLVM="0"
 ENV BUILD_AITER_ALL="1"
 ENV BUILD_MOONCAKE="1"
-ENV AITER_COMMIT="85f66157f3d3f085085caa554b398d264c73a733"
+ENV AITER_COMMIT="v0.1.5"
 ENV NO_DEPS_FLAG="--no-deps"
 
 # ===============================
