--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -36,7 +36,7 @@ jobs:
           filters: |
             src:
               - "python/**"
-              - "scripts/**"
+              - "scripts/ci/**"
               - "test/**"
               - ".github/workflows/pr-test.yml"
 
