--- a/.github/workflows/pr-benchmark-rust.yml
+++ b/.github/workflows/pr-benchmark-rust.yml
@@ -35,6 +35,7 @@ jobs:
 
       - name: Setup sccache
         uses: mozilla-actions/sccache-action@v0.0.3
+        continue-on-error: true
 
       - name: Cache Rust dependencies
         uses: actions/cache@v4
@@ -50,12 +51,19 @@ jobs:
             ${{ runner.os }}-cargo-
 
       - name: Check benchmarks compile
-        env:
-          RUSTC_WRAPPER: sccache
-          SCCACHE_GHA_ENABLED: "true"
         run: |
           source "$HOME/.cargo/env"
           cd sgl-router/
+          # Try with sccache if available, fallback to regular cargo
+          if command -v sccache &> /dev/null; then
+            echo "Using sccache for compilation"
+            export RUSTC_WRAPPER=sccache
+            export SCCACHE_GHA_ENABLED="true"
+            # Start sccache with error handling
+            sccache --start-server || true
+          else
+            echo "sccache not available, using regular cargo"
+          fi
           cargo check --benches
 
   # Full benchmark jobs that only run with label or on main branch
@@ -80,6 +88,7 @@ jobs:
 
       - name: Setup sccache
         uses: mozilla-actions/sccache-action@v0.0.3
+        continue-on-error: true
 
       - name: Cache Rust dependencies
         uses: actions/cache@v4
@@ -96,12 +105,19 @@ jobs:
 
       - name: Run request processing benchmark
         timeout-minutes: 30
-        env:
-          RUSTC_WRAPPER: sccache
-          SCCACHE_GHA_ENABLED: "true"
         run: |
           source "$HOME/.cargo/env"
           cd sgl-router/
+          # Try with sccache if available, fallback to regular cargo
+          if command -v sccache &> /dev/null; then
+            echo "Using sccache for compilation"
+            export RUSTC_WRAPPER=sccache
+            export SCCACHE_GHA_ENABLED="true"
+            # Start sccache with error handling
+            sccache --start-server || true
+          else
+            echo "sccache not available, using regular cargo"
+          fi
           # Run only the summary benchmark for quick validation in PRs
           cargo bench --bench request_processing -- benchmark_summary --exact
 
@@ -134,6 +150,7 @@ jobs:
 
       - name: Setup sccache
         uses: mozilla-actions/sccache-action@v0.0.3
+        continue-on-error: true
 
       - name: Cache Rust dependencies
         uses: actions/cache@v4
@@ -150,12 +167,19 @@ jobs:
 
       - name: Run tokenizer benchmark
         timeout-minutes: 30
-        env:
-          RUSTC_WRAPPER: sccache
-          SCCACHE_GHA_ENABLED: "true"
         run: |
           source "$HOME/.cargo/env"
           cd sgl-router/
+          # Try with sccache if available, fallback to regular cargo
+          if command -v sccache &> /dev/null; then
+            echo "Using sccache for compilation"
+            export RUSTC_WRAPPER=sccache
+            export SCCACHE_GHA_ENABLED="true"
+            # Start sccache with error handling
+            sccache --start-server || true
+          else
+            echo "sccache not available, using regular cargo"
+          fi
           cargo bench --bench tokenizer_benchmark
 
       - name: Upload benchmark results
@@ -187,6 +211,7 @@ jobs:
 
       - name: Setup sccache
         uses: mozilla-actions/sccache-action@v0.0.3
+        continue-on-error: true
 
       - name: Cache Rust dependencies
         uses: actions/cache@v4
@@ -203,12 +228,19 @@ jobs:
 
       - name: Run tool parser benchmark
         timeout-minutes: 30
-        env:
-          RUSTC_WRAPPER: sccache
-          SCCACHE_GHA_ENABLED: "true"
         run: |
           source "$HOME/.cargo/env"
           cd sgl-router/
+          # Try with sccache if available, fallback to regular cargo
+          if command -v sccache &> /dev/null; then
+            echo "Using sccache for compilation"
+            export RUSTC_WRAPPER=sccache
+            export SCCACHE_GHA_ENABLED="true"
+            # Start sccache with error handling
+            sccache --start-server || true
+          else
+            echo "sccache not available, using regular cargo"
+          fi
           cargo bench --bench tool_parser_benchmark
 
       - name: Upload benchmark results
